salesforce_app/force-app/main/default/objects/Intern__c/Intern__c.object-meta.xml
<CustomObject>
    <description>Stores information about interns for the custom portal.</description>
    <label>Intern</label>
    <nameField>
        <label>Intern Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>