salesforce_app/force-app/main/default/objects/Intern__c/fields/Bio__c.field-meta.xml
<CustomField>
    <fullName>Bio__c</fullName>
    <label>Bio</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>