salesforce_app/force-app/main/default/objects/Intern__c/fields/Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Team Lead assigned to manage this intern.</description>
    <label>Team Lead</label>
    <referenceTo>Admin_User__c</referenceTo>
    <relationshipLabel>My Interns</relationshipLabel>
    <relationshipName>Interns</relationshipName>
    <type>Lookup</type>
</CustomField>